package(default_visibility = ["//javatests/de/jflex/ucd_generator:__subpackages__"])

java_library(
    name = "ucd_generator",
    srcs = [
        "UcdGenerator.java",
        "UcdGeneratorParams.java",
        "UcdScanner.java",
    ],
    deps = [
        "//java/de/jflex/ucd_generator/emitter/unicode_properties",
        "//java/de/jflex/ucd_generator/emitter/unicode_version",
        "//java/de/jflex/ucd_generator/model",
        "//java/de/jflex/ucd_generator/scanner:exception",
        "//java/de/jflex/ucd_generator/scanner:ucd_scanners",
        "//java/de/jflex/ucd_generator/ucd",
        "//java/de/jflex/util/javac",
        "//java/de/jflex/velocity",
        "//third_party/com/google/auto_value",
        "//third_party/com/google/guava",
        "//third_party/org/apache/velocity",
    ],
)

java_binary(
    name = "Main",
    srcs = ["Main.java"],
    visibility = ["//visibility:public"],
    deps = [
        ":ucd_generator",
        "//java/de/jflex/ucd_generator/ucd",
        "//third_party/com/google/guava",
    ],
)
