java_library(
    name = "model",
    srcs =
        glob(["*.java"]),
    visibility = [
        "//java/jflex/ucd_generator:__subpackages__",
        "//javatests/jflex:__subpackages__",
    ],
    deps = [
        "//java/jflex/ucd_generator/ucd",
        "//java/jflex/ucd_generator/util:hexa_utils",
        "//java/jflex/ucd_generator/util:name_normalizer",
        "//java/jflex/ucd_generator/util:surrogate_utils",
        "//third_party/com/google/code/findbugs:jsr305",
        "//third_party/com/google/guava",
    ],
)
