load("@jflex_rules//jflex:jflex.bzl", "jflex")

java_library(
    name = "ucd_scanners",
    srcs = [
        "AbstractBinaryPropertiesFileScanner.java",
        "AbstractEnumeratedPropertyFileScanner.java",
        "AbstractPropertyAliasesScanner.java",
        "AbstractPropertyValueAliasesScanner.java",
        "AbstractScriptExtensionsScanner.java",
        "AbstractUnicodeDataScanner.java",
        "DerivedAgeScanner.java",
        ":gen_ucd_scanners",
    ],
    visibility = [
        "//java/jflex/ucd_generator:__subpackages__",
        "//javatests/jflex:__subpackages__",
    ],
    deps = [
        ":exception",
        "//java/jflex/ucd_generator/model",
        "//java/jflex/ucd_generator/ucd",
        "//java/jflex/ucd_generator/util:name_normalizer",
        "//java/jflex/ucd_generator/util:surrogate_utils",
        "//third_party/com/google/guava",
    ],
)

java_library(
    name = "exception",
    srcs = ["UcdScannerException.java"],
    visibility = ["//java/jflex/ucd_generator:__subpackages__"],
    deps = [],
)

jflex(
    name = "gen_ucd_scanners",
    srcs = glob(["*.flex"]),
    outputs = [
        "BinaryPropertiesFileScanner.java",
        "EnumeratedPropertyFileScanner.java",
        "PropertyAliasesScanner.java",
        "PropertyValueAliasesScanner.java",
        "ScriptExtensionsScanner.java",
        "UnicodeDataScanner.java",
    ],
    visibility = ["//java/jflex/ucd_generator:__subpackages__"],
)
