java_library(
    name = "ucd",
    srcs = glob(["*.java"]),
    visibility = [
        "//java/jflex/ucd_generator:__subpackages__",
        "//javatests/jflex/ucd_generator:__subpackages__",
    ],
    deps = [
        "//third_party/com/google/auto_value",
        "//third_party/com/google/guava",
    ],
)
