# Copyright 2021, Régis Décamps
# SPDX-License-Identifier: BSD-3-Clause

load("//testsuite:testsuite.bzl", "jflex_testsuite")

jflex_testsuite(
    name = "DiffOutputStreamTest",
    srcs = ["DiffOutputStreamTest.java"],
    deps = [
        "//java/de/jflex/testing/assertion",
        "//java/de/jflex/testing/diff",
    ],
)
