java_test(
    name = "MainTest",
    srcs = ["MainTest.java"],
    data = [
        "//third_party/unicode:ucd_10_0",
        "//third_party/unicode:ucd_3_1_1",
        "//third_party/unicode:ucd_4_0_1",
    ],
    deps = [
        "//java/de/jflex/ucd_generator:Main",
        "//java/de/jflex/ucd_generator/ucd",
        "//third_party/com/google/truth",
    ],
)

java_test(
    name = "UcdGeneratorIntegrationTest",
    size = "medium",
    srcs = ["UcdGeneratorIntegrationTest.java"],
    data = [
        "Unicode_10_0.java.golden",
        "Unicode_5_0.java.golden",
        "Unicode_6_3.java.golden",
        "//third_party/unicode:ucd_10_0",
        "//third_party/unicode:ucd_11_0",
        "//third_party/unicode:ucd_12_0",
        "//third_party/unicode:ucd_12_1",
        "//third_party/unicode:ucd_1_1_5",
        "//third_party/unicode:ucd_2_0_14",
        "//third_party/unicode:ucd_2_1_9",
        "//third_party/unicode:ucd_3_0_1",
        "//third_party/unicode:ucd_3_1_1",
        "//third_party/unicode:ucd_3_2_0",
        "//third_party/unicode:ucd_4_0_1",
        "//third_party/unicode:ucd_4_1_0",
        "//third_party/unicode:ucd_5_0",
        "//third_party/unicode:ucd_5_1",
        "//third_party/unicode:ucd_5_2",
        "//third_party/unicode:ucd_6_0",
        "//third_party/unicode:ucd_6_1",
        "//third_party/unicode:ucd_6_2",
        "//third_party/unicode:ucd_6_3",
        "//third_party/unicode:ucd_7_0",
        "//third_party/unicode:ucd_8_0",
        "//third_party/unicode:ucd_9_0",
    ],
    deps = [
        ":tested_versions",
        "//java/de/jflex/testing/diff",
        "//java/de/jflex/testing/javaast",
        "//java/de/jflex/ucd_generator",
        "//java/de/jflex/ucd_generator/ucd",
        "//java/de/jflex/ucd_generator/util:java_strings",
        "//jflex/src/main/java/jflex/core/unicode",
        "//third_party/com/google/auto_value",
        "//third_party/com/google/truth",
    ],
)

java_library(
    name = "tested_versions",
    testonly = True,
    srcs = ["TestedVersions.java"],
    data = [
        "//third_party/unicode:ucd_10_0",
    ],
    visibility = ["//javatests:__subpackages__"],
    deps = [
        "//java/de/jflex/ucd_generator/ucd",
        "//java/de/jflex/version",
    ],
)
