java_test(
    name = "TemplateVarsTest",
    srcs = ["TemplateVarsTest.java"],
    deps = [
        "//java/de/jflex/testing/assertion",
        "//java/de/jflex/velocity",
        "//third_party/com/google/truth",
        "//third_party/org/apache/velocity",
    ],
)

java_test(
    name = "VelocityTest",
    srcs = ["VelocityTest.java"],
    deps = [
        "//java/de/jflex/velocity",
        "//third_party/com/google/truth",
        "//third_party/org/apache/velocity",
    ],
)
