# caseless

# This build file was generated automatically, but won't be re-generated.
# Feel free to improve.

load("@jflex_rules//jflex:jflex.bzl", "jflex")
load("//testsuite:testsuite.bzl", "jflex_testsuite")

jflex(
    name = "gen_caseless_scanner",
    srcs = ["caseless.flex"],
    jflex_bin = "//jflex:jflex_bin",
    jlex = True,
    outputs = ["Caseless.java"],
)

java_library(
    name = "caseless_scanner",
    srcs = [
        ":gen_caseless_scanner",
    ],
    deps = [
        "//java/jflex/testing/testsuite/golden",
        "//third_party/com/google/guava",
        "//third_party/javax:annotation",
    ],
)

java_test(
    name = "CaselessGoldenTest",
    srcs = [
        "CaselessGoldenTest.java",
    ],
    data = [
        "caseless-0.input",
        "caseless-0.output",
    ],
    deps = [
        ":caseless_scanner",
        "//java/jflex/testing/diff",
        "//java/jflex/testing/testsuite/golden",
        "//java/jflex/util/scanner:scanner_factory",
        "//third_party/com/google/guava",
        "//third_party/com/google/truth",
    ],
)

jflex_testsuite(
    name = "GenerationTest",
    srcs = ["GenerationTest.java"],
    data = [
        "caseless.flex",
        "caseless.sysout",
    ],
    deps = ["//jflex/src/main/java/jflex/exceptions"],
)
