# This build file was generated automatically, but won't be re-generated.
# Feel free to improve.

load("@jflex_rules//jflex:jflex.bzl", "jflex")

# cclmacros

jflex(
    name = "gen_cclmacros_scanner",
    srcs = ["cclmacros.flex"],
    jflex_bin = "//jflex:jflex_bin",
    outputs = ["Cclmacros.java"],
)

java_library(
    name = "cclmacros_scanner",
    srcs = [
        ":gen_cclmacros_scanner",
    ],
    deps = [
        "//java/jflex/testing/testsuite/golden",
        "//third_party/com/google/guava",
        "//third_party/java:jsr250",
    ],
)

java_test(
    name = "CclmacrosGoldenTest",
    srcs = [
        "CclmacrosGoldenTest.java",
    ],
    data = [
        "cclmacros-0.input",
        "cclmacros-0.output",
    ],
    deps = [
        ":cclmacros_scanner",
        "//java/jflex/testing/diff",
        "//java/jflex/testing/testsuite/golden",
        "//java/jflex/util/scanner:scanner_factory",
        "//third_party/com/google/guava",
        "//third_party/com/google/truth",
    ],
)
